11712406-project2/test/test_11712406_7.out
Error type 7 at Line 5: binary operation on non-number variables